@@ -278,6 +278,9 @@ typedef uint32_t vki_u32;
 #define	VKI_F_GETLK	F_GETLK
 #define	VKI_F_SETLK	F_SETLK
 #define	VKI_F_SETLKW	F_SETLKW
+#if DARWIN_VERS >= DARWIN_10_10
+#define	VKI_F_SETLKWTIMEOUT F_SETLKWTIMEOUT
+#endif
 
 #define VKI_F_CHKCLEAN	F_CHKCLEAN
 #define VKI_F_PREALLOCATE	F_PREALLOCATE
